[package]
name = "herdsman_africa"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }

[alias]
dev = "watch -q -c -x run"
